cursive-bootstrap/tests/ui/E-TYP/E-TYP-2407.cursive
// RUN: compile-fail
// DIAG: E-TYP-2407
// SPEC: 5.3
// DESC: Conflicting state names from multiple classes

class Resource1 {
    @Open { x: i32 }
    @Closed { }
}

class Resource2 {
    @Open { y: f64 }
    @Done { }
}

modal MyResource {
    @Open { x: i32 }
    @Closed { }
    @Done { }
}

implements Resource1 for MyResource { }
implements Resource2 for MyResource { } //~ ERROR E-TYP-2407

public procedure main(move ctx: Context) -> i32 {
    return 0
}
